clusters/seaweedfs-cluster/metrics-server/metrics-server-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-scraping
  namespace: metrics-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEntities:
    - kube-apiserver
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
